<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="viewModel"
                  type="com.ex.billablehours.timecard.viewmodel.TimeCardViewModel"/>
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context="com.ex.billablehours.timecard.ui.TimeCardFragment">

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"
                android:id="@+id/textInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/projectName"
                    android:inputType="text"
                    android:hint="@string/project_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:backgroundTint="@color/white"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout" android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"
                android:id="@+id/textInputLayout2">

            <com.google.android.material.textfield.TextInputEditText
                    android:inputType="number"
                    android:hint="@string/biller_rate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/billerRate"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:text="@string/select_data"
                  android:padding="15dp"
                  android:drawableEnd="@drawable/ic_date_range_black_24dp"
                  android:background="@drawable/curve_gery_border"
                  app:layout_constraintStart_toStartOf="parent"
                  android:layout_marginStart="16dp"
                  app:layout_constraintEnd_toEndOf="parent"
                  android:layout_marginEnd="16dp"
                  android:layout_marginTop="16dp"
                  app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" android:id="@+id/selectDateTextView"/>
        <TextView
                android:text="@string/select_start_time"
                android:layout_width="0dp"
                android:drawableEnd="@drawable/ic_access_time_black_24dp"
                android:layout_height="wrap_content"
                android:id="@+id/selectStartTimeTextView"
                android:layout_marginTop="16dp"
                android:padding="15dp"
                android:background="@drawable/curve_gery_border"
                app:layout_constraintTop_toBottomOf="@+id/selectDateTextView"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"/>
        <TextView
                android:text="@string/select_stop_time"
                android:layout_width="0dp"
                android:padding="15dp"
                android:drawableEnd="@drawable/ic_access_time_black_24dp"
                android:background="@drawable/curve_gery_border"
                android:layout_height="wrap_content"
                android:id="@+id/selectStopTimeTextView"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/selectStartTimeTextView"/>

        <com.google.android.material.button.MaterialButton
                android:id="@+id/createTimeCardButton"
                android:text="@string/create"
                android:layout_width="250dp"
                android:layout_height="65dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/selectStopTimeTextView"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
