<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="viewModel"
                  type="com.ex.billablehours.login.viewModel.LoginViewModel"/>
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            tools:context="com.ex.billablehours.login.ui.LoginFragment">

        <ImageView android:layout_width="174dp"
                   android:layout_height="105dp"
                   android:src="@drawable/biller"
                   app:layout_constraintStart_toStartOf="parent"
                   android:layout_marginStart="8dp"
                   android:layout_marginEnd="8dp"
                   app:layout_constraintEnd_toEndOf="parent"
                   app:layout_constraintTop_toTopOf="parent"
                   android:layout_marginTop="120dp"
                   app:layout_constraintHorizontal_bias="0.497"
                   android:id="@+id/imageView2"/>

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailAddressField"
                android:inputType="textEmailAddress"
                android:hint="@string/email_address"
                android:imeOptions="actionNext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="24dp"
                app:layout_constraintTop_toBottomOf="@+id/imageView2"/>

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:imeOptions="actionDone"
                android:layout_marginTop="24dp"
                android:hint="@string/password"
                app:layout_constraintTop_toBottomOf="@+id/emailAddressField"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"/>


        <com.google.android.material.button.MaterialButton
                android:id="@+id/loginButton"
                android:layout_width="234dp"
                android:layout_height="55dp"
                android:text="@string/login"
                android:textColor="@color/white"
                android:background="@color/colorPrimaryDark"
                android:layout_marginTop="24dp"
                app:layout_constraintTop_toBottomOf="@+id/passwordField"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"/>

        <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@+id/passwordField"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
        />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
